--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.4.1",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
+    "element-ui": "^2.4.11",
     "koa": "^2.6.2",
-    "element-ui": "^2.4.11"
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa-session": "^5.10.1",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
