--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "generate": "cross-env PORT=8080 nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.4.1",
+    "cookie-universal-nuxt": "^2.0.14",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0",
+    "element-ui": "^2.4.11",
     "koa": "^2.6.2",
-    "element-ui": "^2.4.11"
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
