--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "cross-env PORT=8080 nuxt generate"
+    "generate": "cross-env port=8080 nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.4.1",
