--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
+    "cookie-universal-nuxt": "^2.0.17",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.8.1",
